# sso_service_fastapi

./: .dockerignore  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose-check.yaml  docker-compose-local.yaml  docker-compose-monitoring.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  docker-compose.yaml  pyproject.toml
backend/docker/: Dockerfile.build  Dockerfile.check  Dockerfile.test
backend/secrets/: .env.example
backend/src/: create_admin_user.py  entrypoint_app.sh  main.py
backend/src/.migrations/: env.py
backend/src/.migrations/versions/: 2025_05_01_1539-74b58b7c34e8_add_user.py
backend/src/.secrets/: .env.example
backend/src/core/: cache.py  config.py  database.py  log.py
backend/src/model/: base.py  user.py
backend/src/repository/: user.py
backend/src/schema/: auth.py  user.py
backend/src/service/: auth.py  user.py
backend/src/utils/: mail.py
backend/tests/: conftest.py
backend/tests/helpers/auth/: auth.py
backend/tests/helpers/cache/: data.py
backend/tests/helpers/database/: database.py  engine.py  session.py
backend/tests/helpers/initial_db_data/: data.py  helpers.py
backend/tests/test_api/healthcheck/: test_status.py
backend/tests/test_api/v1/auth/login/: test_login.py
backend/tests/test_api/v1/auth/refresh_token/: test_refresh_token.py
backend/tests/test_api/v1/user/create/: test_output.py
backend/tests/test_service/user/: test_delete.py  test_update.py
monitoring/: loki.yaml  prometheus.yml  promtail.yaml
secrets/: .env.example
src/: Makefile  alembic.ini  main.py
src/.migrations/versions/: 2025_05_01_1539-74b58b7c34e8_add_user.py  2025_05_06_1105-f87e8844e72c_change_user.py
src/api/: router_general.py
src/api/v1/: router_v1.py
src/api/v1/auth/: controller.py
src/api/v1/token/: controller.py
src/api/v1/user/: controller.py
src/core/: cache.py  celery.py  config.py  constants.py  database.py
src/core/middleware/: auth.py
src/model/: __init__.py  base.py  user.py
src/repository/: base.py  user.py
src/schema/: auth.py  user.py
src/service/: auth.py  user.py
src/utils/: mail.py
src/utils/tasks/: email.py
tests/: conftest.py
tests/api/healthcheck/: test_output.py  test_status.py
tests/api/user/create/: test_status.py
tests/api/v1/user/create/: test_output.py
tests/api/v1/user/delete/: test_output.py  test_status.py
tests/api/v1/user/read/: test_output.py  test_status.py
tests/api/v1/user/update/: test_output.py  test_status.py
tests/helpers/auth/: auth.py
tests/helpers/cache/: cache.py
tests/helpers/http_client/: client.py
tests/helpers/initial_db_data/: data.py
tests/test_api/healthcheck/: test_status.py
tests/test_api/v1/auth/refresh_token/: test_refresh_token.py
tests/test_api/v1/auth/token_verify/: test_verify_token.py
tests/test_api/v1/auth/verify_email/: test_verify_email.py
tests/test_service/user/: test_create.py  test_find.py
