[tool.poetry]
name = "sso"
version = "0.1.0"
description = ""
authors = ["ya_novikov <arhdomain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
redis = "^6.0.0"
pyjwt = "^2.10.1"
alembic = "^1.15.2"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
